Fix: [토픽룸] 차단한 상대가 마지막 발신자여도 나머지 알림은 발송